--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,9 @@ img {
 .form-control::placeholder {
     color: #bbb !important;
 }
+
+.date-info {
+    font-size: 0.75em;
+    margin-bottom: 0;
+    color: #555555;
+}
