Work on the design of the profile page

--- a/src/static/css/form.css
+++ b/src/static/css/form.css
@@ -98,3 +98,11 @@
 .login-form .forgetPwd {
     text-decoration: none;
 }
+
+.avatar {
+    max-width: 40%!important;
+}
+
+.img-avatar {
+    border: 1px solid;
+}
