--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,23 @@ img {
     margin-bottom: 2em;
     color: #555555;
 }
+
+.footer {
+   /* position: absolute;*/
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+
+.f:hover .task-action {
+    display: block;
+}
+
+.task-action {
+    cursor: pointer;
+    opacity: 0.70;
+    display: none;
+}
+
