--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,22 @@ img {
     display: none;
 }
 
+.priority-low {
+    height: 0.15em;
+    background-color: chartreuse;
+    opacity: 0.7;
+}
+
+.priority-middle {
+    height: 0.15em;
+    background-color: #ffc107;
+    opacity: 0.7;
+}
+
+.priority-high {
+    height: 0.15em;
+    background-color: red;
+    opacity: 0.7;
+}
+
+
