--- a/src/App.css
+++ b/src/App.css
@@ -80,32 +80,31 @@ img {
     background-color: #f5f5f5;
 }
 
-.f:hover .task-action {
-    display: block;
+.f:hover {
+    box-shadow: 2px 2px 5px 2px rgba(0,0,0, 0.10);
+    transform: translateY(-1px);
 }
 
-.task-action {
+.shadow {
     cursor: pointer;
     opacity: 0.70;
     display: none;
 }
 
 .priority-low {
-    height: 0.15em;
-    background-color: chartreuse;
-    opacity: 0.7;
+    border-left: 3px solid chartreuse!important;
 }
 
 .priority-middle {
-    height: 0.15em;
-    background-color: #ffc107;
-    opacity: 0.7;
+    border-left: 3px solid #ffc107!important;
 }
 
 .priority-high {
-    height: 0.15em;
-    background-color: red;
-    opacity: 0.7;
+    border-left: 3px solid red!important;
+}
+
+.without-brd {
+    border-radius: 0!important;
 }
 
 
