--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,8 @@ img {
 }
 
 .f:hover {
-    box-shadow: 2px 2px 5px 2px rgba(0,0,0, 0.10);
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
+    0 4px 15px 0 rgba(0, 0, 0, 0.15);
     transform: translateY(-1px);
 }
 
